feat: 🎸 added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,15 @@ before_install:
 
 script:
   - docker run -e CI=true thirteen/docker-react npm run test
+
+deploy:
+  provider: elasticbenstalk
+  region: "ap-southeast-1"
+  app: "docker-test"
+  env: "DockerTest-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-788241664327"
+  bucket_path: "docker-test"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
