fix: 🐛 branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ deploy:
   bucket_name: "elasticbeanstalk-ap-southeast-1-788241664327"
   bucket_path: "docker-test"
   on:
-    branch: master
+    branch: main
   access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key: "$AWS_SECRET_KEY"
